# WatchGame

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: AndroidApp.cpp  AndroidApp.h  CMakeLists.txt  GraphicsDevice.cpp  GraphicsDevice.h  Log.h  Renderer.cpp  Renderer.h  main.cpp
app/src/main/cpp/mesh/: Mesh.h  Vertex.h
app/src/main/cpp/shader/: Shader.h  Vertex.h
app/src/main/cpp/util/: Ensure.h  Log.h  Type.h  Util.h
app/src/main/java/com/example/roguelike/: MainActivity.kt
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
